--- a/days/day01/solution.ipynb
+++ b/days/day01/solution.ipynb
@@ -10,12 +10,15 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.565036Z",
-          "start_time": "2024-12-01T20:52:58.478384Z"
+          "end_time": "2024-12-03T13:12:24.782061Z",
+          "start_time": "2024-12-03T13:12:24.684144Z"
         }
       },
       "cell_type": "code",
       "source": [
+        "import matrix.readStringMatrix\n",
+        "import matrix.transpose\n",
+        "\n",
         "typealias Input = Pair<List<Int>, List<Int>>\n",
         "\n",
         "fun readInput(name: String): Input =\n",
@@ -40,8 +43,8 @@
       "metadata": {
         "collapsed": true,
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.622893Z",
-          "start_time": "2024-12-01T20:52:58.567702Z"
+          "end_time": "2024-12-03T13:12:24.845574Z",
+          "start_time": "2024-12-03T13:12:24.785018Z"
         }
       },
       "cell_type": "code",
@@ -57,8 +60,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.651465Z",
-          "start_time": "2024-12-01T20:52:58.626949Z"
+          "end_time": "2024-12-03T13:12:24.876610Z",
+          "start_time": "2024-12-03T13:12:24.848428Z"
         }
       },
       "cell_type": "code",
@@ -69,8 +72,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.677277Z",
-          "start_time": "2024-12-01T20:52:58.654986Z"
+          "end_time": "2024-12-03T13:12:24.909787Z",
+          "start_time": "2024-12-03T13:12:24.880386Z"
         }
       },
       "cell_type": "code",
@@ -88,8 +91,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.786638Z",
-          "start_time": "2024-12-01T20:52:58.736033Z"
+          "end_time": "2024-12-03T13:12:24.961915Z",
+          "start_time": "2024-12-03T13:12:24.912803Z"
         }
       },
       "cell_type": "code",
@@ -104,8 +107,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.814004Z",
-          "start_time": "2024-12-01T20:52:58.789117Z"
+          "end_time": "2024-12-03T13:12:24.991932Z",
+          "start_time": "2024-12-03T13:12:24.964652Z"
         }
       },
       "cell_type": "code",
@@ -116,8 +119,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-01T20:52:58.857924Z",
-          "start_time": "2024-12-01T20:52:58.817843Z"
+          "end_time": "2024-12-03T13:12:25.029552Z",
+          "start_time": "2024-12-03T13:12:24.994667Z"
         }
       },
       "cell_type": "code",
@@ -142,7 +145,10 @@
       "nbconvert_exporter": ""
     },
     "ktnbPluginMetadata": {
-      "projectDependencies": true
+      "projectDependencies": [
+        "aoc24.main"
+      ],
+      "projectLibraries": false
     }
   },
   "nbformat": 4,
