--- a/days/day03/solution.ipynb
+++ b/days/day03/solution.ipynb
@@ -9,18 +9,16 @@
     },
     {
       "metadata": {
-        "collapsed": true,
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.575161Z",
-          "start_time": "2024-12-03T13:12:28.543007Z"
+          "end_time": "2024-12-03T13:13:10.724885Z",
+          "start_time": "2024-12-03T13:13:10.671289Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "import matrix.readIntMatrix\n",
+        "import input.readString\n",
         "\n",
-        "val testData = readIntMatrix(\"test\")\n",
-        "val inputData = readIntMatrix(\"input\")"
+        "val (test, input) = readString(\"test\", \"input\").map { it.replace('\\n', '_') }"
       ],
       "outputs": [],
       "execution_count": null
@@ -35,17 +33,16 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.711582Z",
-          "start_time": "2024-12-03T13:12:28.577656Z"
+          "end_time": "2024-12-03T13:13:10.773174Z",
+          "start_time": "2024-12-03T13:13:10.727386Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "fun isSafe(report: List<Int>) = report.windowed(2).fold(emptyList()) { acc: List<Int>, (first, second) ->\n",
-        "    acc + (first - second)\n",
-        "}.let { diffs ->\n",
-        "    diffs.map(Math::abs).all { 1 <= it && it <= 3 } && Math.abs(diffs.count { it < 0 } - diffs.count { it > 0 })==diffs.size\n",
-        "}"
+        "fun getValidMuls(input: String) = Regex(\"mul\\\\((\\\\d{1,3}),(\\\\d{1,3})\\\\)\").findAll(input).map {\n",
+        "    val (_, first, second) = it.groupValues\n",
+        "    first.toInt() to second.toInt()\n",
+        "}.toList()"
       ],
       "outputs": [],
       "execution_count": null
@@ -53,24 +50,36 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.758891Z",
-          "start_time": "2024-12-03T13:12:28.715672Z"
+          "end_time": "2024-12-03T13:13:10.813928Z",
+          "start_time": "2024-12-03T13:13:10.775417Z"
         }
       },
       "cell_type": "code",
-      "source": "check(testData.count(::isSafe)==2)",
+      "source": "fun sumOfProducts(pairs: List<Pair<Int, Int>>) = pairs.sumOf { (first, second) -> first * second }",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.803286Z",
-          "start_time": "2024-12-03T13:12:28.762620Z"
+          "end_time": "2024-12-03T13:13:10.840014Z",
+          "start_time": "2024-12-03T13:13:10.816420Z"
         }
       },
       "cell_type": "code",
-      "source": "inputData.count(::isSafe)",
+      "source": "check(sumOfProducts(getValidMuls(test))==161)",
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-12-03T13:13:10.868221Z",
+          "start_time": "2024-12-03T13:13:10.843852Z"
+        }
+      },
+      "cell_type": "code",
+      "source": "sumOfProducts(getValidMuls(input))",
       "outputs": [],
       "execution_count": null
     },
@@ -84,15 +93,26 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.865749Z",
-          "start_time": "2024-12-03T13:12:28.806301Z"
+          "end_time": "2024-12-03T13:13:10.892522Z",
+          "start_time": "2024-12-03T13:13:10.870892Z"
+        }
+      },
+      "cell_type": "code",
+      "source": "fun removeDisabledMuls(input: String) = Regex(\"don't\\\\(\\\\).*?(do\\\\(\\\\)|$)\").replace(input, \"\")",
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2024-12-03T13:13:10.935406Z",
+          "start_time": "2024-12-03T13:13:10.894859Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "fun isSafeWithProblemDampener(report: List<Int>) = report.indices.map { index ->\n",
-        "    report.toMutableList().also { it.removeAt(index) }\n",
-        "}.any(::isSafe)"
+        "val (test2) = readString(\"test2\").map { it.replace('\\n', '_') }\n",
+        "check(sumOfProducts(getValidMuls(removeDisabledMuls(test2)))==48)"
       ],
       "outputs": [],
       "execution_count": null
@@ -100,24 +120,12 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.913329Z",
-          "start_time": "2024-12-03T13:12:28.869199Z"
+          "end_time": "2024-12-03T13:13:10.962835Z",
+          "start_time": "2024-12-03T13:13:10.938720Z"
         }
       },
       "cell_type": "code",
-      "source": "check(testData.count(::isSafeWithProblemDampener)==4)",
-      "outputs": [],
-      "execution_count": null
-    },
-    {
-      "metadata": {
-        "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.967038Z",
-          "start_time": "2024-12-03T13:12:28.916555Z"
-        }
-      },
-      "cell_type": "code",
-      "source": "inputData.count(::isSafeWithProblemDampener)",
+      "source": "sumOfProducts(getValidMuls(removeDisabledMuls(input)))",
       "outputs": [],
       "execution_count": null
     }
