--- a/days/day01/solution.ipynb
+++ b/days/day01/solution.ipynb
@@ -10,24 +10,26 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:24.782061Z",
-          "start_time": "2024-12-03T13:12:24.684144Z"
+          "end_time": "2024-12-04T20:10:36.049577Z",
+          "start_time": "2024-12-04T20:10:35.800359Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "import matrix.readStringMatrix\n",
-        "import matrix.transpose\n",
+        "import input.file\n",
         "\n",
         "typealias Input = Pair<List<Int>, List<Int>>\n",
         "\n",
-        "fun readInput(name: String): Input =\n",
-        "    with(readStringMatrix(name).transpose()) {\n",
-        "        first().map { it.toInt() } to last().map { it.toInt() }\n",
+        "fun parseInput(data: String): Input = data.lines().map { it.split(Regex(\"\\\\s+\")) }.let {\n",
+        "    it.first().indices.map { colIndex ->\n",
+        "        it.indices.map { rowIndex -> it[rowIndex][colIndex] }\n",
         "    }\n",
+        "}.let {\n",
+        "    it.first().map(String::toInt) to it.last().map(String::toInt)\n",
+        "}\n",
         "\n",
-        "val testData = readInput(\"test\")\n",
-        "val inputData = readInput(\"input\")"
+        "val test by file(::parseInput)\n",
+        "val input by file(::parseInput)"
       ],
       "outputs": [],
       "execution_count": null
@@ -43,13 +45,13 @@
       "metadata": {
         "collapsed": true,
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:24.845574Z",
-          "start_time": "2024-12-03T13:12:24.785018Z"
+          "end_time": "2024-12-04T20:10:36.124320Z",
+          "start_time": "2024-12-04T20:10:36.054219Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "fun distance(input: Input) =\n",
+        "fun distance(input: Pair<List<Int>, List<Int>>) =\n",
         "    input.first.sorted().zip(input.second.sorted()).fold(0) { acc, (first, second) ->\n",
         "        acc + Math.abs(first - second)\n",
         "    }"
@@ -60,24 +62,24 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:24.876610Z",
-          "start_time": "2024-12-03T13:12:24.848428Z"
+          "end_time": "2024-12-04T20:10:36.169559Z",
+          "start_time": "2024-12-04T20:10:36.127332Z"
         }
       },
       "cell_type": "code",
-      "source": "check(distance(testData)==11)",
+      "source": "check(distance(test)==11)",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:24.909787Z",
-          "start_time": "2024-12-03T13:12:24.880386Z"
+          "end_time": "2024-12-04T20:10:36.204523Z",
+          "start_time": "2024-12-04T20:10:36.173525Z"
         }
       },
       "cell_type": "code",
-      "source": "distance(inputData)",
+      "source": "distance(input)",
       "outputs": [],
       "execution_count": null
     },
@@ -91,8 +93,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:24.961915Z",
-          "start_time": "2024-12-03T13:12:24.912803Z"
+          "end_time": "2024-12-04T20:10:36.256543Z",
+          "start_time": "2024-12-04T20:10:36.207586Z"
         }
       },
       "cell_type": "code",
@@ -107,24 +109,24 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:24.991932Z",
-          "start_time": "2024-12-03T13:12:24.964652Z"
+          "end_time": "2024-12-04T20:10:36.292304Z",
+          "start_time": "2024-12-04T20:10:36.259199Z"
         }
       },
       "cell_type": "code",
-      "source": "check(similarity(testData)==31)",
+      "source": "check(similarity(test)==31)",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:25.029552Z",
-          "start_time": "2024-12-03T13:12:24.994667Z"
+          "end_time": "2024-12-04T20:10:36.337636Z",
+          "start_time": "2024-12-04T20:10:36.296266Z"
         }
       },
       "cell_type": "code",
-      "source": "similarity(inputData)",
+      "source": "similarity(input)",
       "outputs": [],
       "execution_count": null
     }
