--- a/days/day02/solution.ipynb
+++ b/days/day02/solution.ipynb
@@ -11,16 +11,18 @@
       "metadata": {
         "collapsed": true,
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.575161Z",
-          "start_time": "2024-12-03T13:12:28.543007Z"
+          "end_time": "2024-12-04T20:10:40.983184Z",
+          "start_time": "2024-12-04T20:10:40.807296Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "import matrix.readIntMatrix\n",
+        "import input.file\n",
         "\n",
-        "val testData = readIntMatrix(\"test\")\n",
-        "val inputData = readIntMatrix(\"input\")"
+        "fun parseInput(input: String) = input.lines().map { it.split(Regex(\"\\\\s+\")) }.map { it.map(String::toInt) }\n",
+        "\n",
+        "val test by file(::parseInput)\n",
+        "val input by file(::parseInput)"
       ],
       "outputs": [],
       "execution_count": null
@@ -35,8 +37,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.711582Z",
-          "start_time": "2024-12-03T13:12:28.577656Z"
+          "end_time": "2024-12-04T20:10:41.079136Z",
+          "start_time": "2024-12-04T20:10:40.986327Z"
         }
       },
       "cell_type": "code",
@@ -53,24 +55,24 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.758891Z",
-          "start_time": "2024-12-03T13:12:28.715672Z"
+          "end_time": "2024-12-04T20:10:41.150553Z",
+          "start_time": "2024-12-04T20:10:41.098841Z"
         }
       },
       "cell_type": "code",
-      "source": "check(testData.count(::isSafe)==2)",
+      "source": "check(test.count(::isSafe)==2)",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.803286Z",
-          "start_time": "2024-12-03T13:12:28.762620Z"
+          "end_time": "2024-12-04T20:10:41.194854Z",
+          "start_time": "2024-12-04T20:10:41.154380Z"
         }
       },
       "cell_type": "code",
-      "source": "inputData.count(::isSafe)",
+      "source": "input.count(::isSafe)",
       "outputs": [],
       "execution_count": null
     },
@@ -84,15 +86,15 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.865749Z",
-          "start_time": "2024-12-03T13:12:28.806301Z"
+          "end_time": "2024-12-04T20:10:41.255448Z",
+          "start_time": "2024-12-04T20:10:41.201445Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "fun isSafeWithProblemDampener(report: List<Int>) = report.indices.map { index ->\n",
-        "    report.toMutableList().also { it.removeAt(index) }\n",
-        "}.any(::isSafe)"
+        "fun isSafeWithProblemDampener(report: List<Int>) = report.indices.any { index ->\n",
+        "    isSafe(report.toMutableList().also { it.removeAt(index) })\n",
+        "}"
       ],
       "outputs": [],
       "execution_count": null
@@ -100,24 +102,24 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.913329Z",
-          "start_time": "2024-12-03T13:12:28.869199Z"
+          "end_time": "2024-12-04T20:10:41.312340Z",
+          "start_time": "2024-12-04T20:10:41.258428Z"
         }
       },
       "cell_type": "code",
-      "source": "check(testData.count(::isSafeWithProblemDampener)==4)",
+      "source": "check(test.count(::isSafeWithProblemDampener)==4)",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:12:28.967038Z",
-          "start_time": "2024-12-03T13:12:28.916555Z"
+          "end_time": "2024-12-04T20:10:41.352637Z",
+          "start_time": "2024-12-04T20:10:41.315896Z"
         }
       },
       "cell_type": "code",
-      "source": "inputData.count(::isSafeWithProblemDampener)",
+      "source": "input.count(::isSafeWithProblemDampener)",
       "outputs": [],
       "execution_count": null
     }
