--- a/days/day04/solution.ipynb
+++ b/days/day04/solution.ipynb
@@ -10,13 +10,14 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.229815Z",
-          "start_time": "2024-12-04T11:04:43.670178Z"
+          "end_time": "2024-12-04T20:12:06.545919Z",
+          "start_time": "2024-12-04T20:12:05.750014Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "import matrix.Matrix\n",
+        "import input.file\n",
+        "import kotlin.streams.toList\n",
         "\n",
         "enum class Direction {\n",
         "    LEFT, RIGHT, UP, DOWN,\n",
@@ -35,7 +36,9 @@
         "    }\n",
         "}\n",
         "\n",
-        "fun Matrix<Char>.findChar(searchedChar: Char): List<Coord> =\n",
+        "typealias CharMatrix = List<List<Char>>\n",
+        "\n",
+        "fun CharMatrix.findChar(searchedChar: Char): List<Coord> =\n",
         "    flatMapIndexed { y, chars ->\n",
         "        chars.mapIndexedNotNull { x, charAtLocation ->\n",
         "            if (searchedChar==charAtLocation) Coord(x, y)\n",
@@ -43,7 +46,12 @@
         "        }\n",
         "    }\n",
         "\n",
-        "fun Matrix<Char>.charAt(coord: Coord): Char? = getOrNull(coord.y)?.getOrNull(coord.x)"
+        "fun CharMatrix.charAt(coord: Coord): Char? = getOrNull(coord.y)?.getOrNull(coord.x)\n",
+        "\n",
+        "fun parseInput(input: String) = input.lines().map { it.chars().toList().map(Int::toChar) }\n",
+        "\n",
+        "val input by file(::parseInput)\n",
+        "val test by file(::parseInput)"
       ],
       "outputs": [],
       "execution_count": null
@@ -58,8 +66,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.417867Z",
-          "start_time": "2024-12-04T11:04:44.234215Z"
+          "end_time": "2024-12-04T20:12:06.706385Z",
+          "start_time": "2024-12-04T20:12:06.550500Z"
         }
       },
       "cell_type": "code",
@@ -87,15 +95,13 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.588398Z",
-          "start_time": "2024-12-04T11:04:44.421589Z"
+          "end_time": "2024-12-04T20:12:06.870481Z",
+          "start_time": "2024-12-04T20:12:06.709739Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "import matrix.Matrix\n",
-        "\n",
-        "fun Matrix<Char>.countWords() = findChar('X').map(::getSearchLocations).flatMap { startingLocations ->\n",
+        "fun CharMatrix.countWords() = findChar('X').map(::getSearchLocations).flatMap { startingLocations ->\n",
         "    startingLocations.map { searchLocations ->\n",
         "        searchLocations.map { charAt(it) }\n",
         "    }.filter { xmasCandidate ->\n",
@@ -111,34 +117,24 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.678484Z",
-          "start_time": "2024-12-04T11:04:44.591916Z"
+          "end_time": "2024-12-04T20:12:06.923823Z",
+          "start_time": "2024-12-04T20:12:06.875441Z"
         }
       },
       "cell_type": "code",
-      "source": [
-        "import input.file\n",
-        "import input.Transformers.charMatrix\n",
-        "\n",
-        "val test by file(charMatrix)\n",
-        "\n",
-        "check(test.countWords() == 18)"
-      ],
+      "source": "check(test.countWords() == 18)",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.773764Z",
-          "start_time": "2024-12-04T11:04:44.683389Z"
+          "end_time": "2024-12-04T20:12:06.998928Z",
+          "start_time": "2024-12-04T20:12:06.927926Z"
         }
       },
       "cell_type": "code",
-      "source": [
-        "val input by file(charMatrix)\n",
-        "input.countWords()"
-      ],
+      "source": "input.countWords()",
       "outputs": [],
       "execution_count": null
     },
@@ -152,8 +148,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.833095Z",
-          "start_time": "2024-12-04T11:04:44.777227Z"
+          "end_time": "2024-12-04T20:12:07.053760Z",
+          "start_time": "2024-12-04T20:12:07.004696Z"
         }
       },
       "cell_type": "code",
@@ -169,13 +165,13 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:44.984128Z",
-          "start_time": "2024-12-04T11:04:44.836699Z"
+          "end_time": "2024-12-04T20:12:07.197108Z",
+          "start_time": "2024-12-04T20:12:07.056738Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "fun Matrix<Char>.countWordsCorrectly() = findChar('A').map(::getCorrectSearchLocations).map { startingLocations ->\n",
+        "fun CharMatrix.countWordsCorrectly() = findChar('A').map(::getCorrectSearchLocations).map { startingLocations ->\n",
         "    startingLocations.map { searchLocations ->\n",
         "        searchLocations.map { charAt(it) }\n",
         "    }\n",
@@ -195,8 +191,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:45.016696Z",
-          "start_time": "2024-12-04T11:04:44.987248Z"
+          "end_time": "2024-12-04T20:12:07.233038Z",
+          "start_time": "2024-12-04T20:12:07.199899Z"
         }
       },
       "cell_type": "code",
@@ -207,8 +203,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-04T11:04:45.065083Z",
-          "start_time": "2024-12-04T11:04:45.020289Z"
+          "end_time": "2024-12-04T20:12:07.284224Z",
+          "start_time": "2024-12-04T20:12:07.237070Z"
         }
       },
       "cell_type": "code",
