--- a/days/day03/solution.ipynb
+++ b/days/day03/solution.ipynb
@@ -10,15 +10,18 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.724885Z",
-          "start_time": "2024-12-03T13:13:10.671289Z"
+          "end_time": "2024-12-04T20:10:45.706733Z",
+          "start_time": "2024-12-04T20:10:45.616796Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "import input.readString\n",
+        "import input.file\n",
         "\n",
-        "val (test, input) = readString(\"test\", \"input\").map { it.replace('\\n', '_') }"
+        "fun parseInput(input: String): String = input.replace(\"\\n\", \"newline\")\n",
+        "\n",
+        "val test by file(::parseInput)\n",
+        "val input by file(::parseInput)"
       ],
       "outputs": [],
       "execution_count": null
@@ -33,8 +36,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.773174Z",
-          "start_time": "2024-12-03T13:13:10.727386Z"
+          "end_time": "2024-12-04T20:10:45.774856Z",
+          "start_time": "2024-12-04T20:10:45.709929Z"
         }
       },
       "cell_type": "code",
@@ -50,8 +53,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.813928Z",
-          "start_time": "2024-12-03T13:13:10.775417Z"
+          "end_time": "2024-12-04T20:10:45.835072Z",
+          "start_time": "2024-12-04T20:10:45.777546Z"
         }
       },
       "cell_type": "code",
@@ -62,8 +65,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.840014Z",
-          "start_time": "2024-12-03T13:13:10.816420Z"
+          "end_time": "2024-12-04T20:10:45.878403Z",
+          "start_time": "2024-12-04T20:10:45.837990Z"
         }
       },
       "cell_type": "code",
@@ -74,8 +77,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.868221Z",
-          "start_time": "2024-12-03T13:13:10.843852Z"
+          "end_time": "2024-12-04T20:10:45.920992Z",
+          "start_time": "2024-12-04T20:10:45.883518Z"
         }
       },
       "cell_type": "code",
@@ -93,25 +96,25 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.892522Z",
-          "start_time": "2024-12-03T13:13:10.870892Z"
+          "end_time": "2024-12-04T20:10:46.010222Z",
+          "start_time": "2024-12-04T20:10:45.981123Z"
         }
       },
       "cell_type": "code",
-      "source": "fun removeDisabledMuls(input: String) = Regex(\"don't\\\\(\\\\).*?(do\\\\(\\\\)|$)\").replace(input, \"\")",
+      "source": "fun removeDisabledMuls(input: String) = Regex(\"don't\\\\(\\\\).*?(do\\\\(\\\\)|$)\").replace(input, \"disabled\")",
       "outputs": [],
       "execution_count": null
     },
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.935406Z",
-          "start_time": "2024-12-03T13:13:10.894859Z"
+          "end_time": "2024-12-04T20:10:46.077620Z",
+          "start_time": "2024-12-04T20:10:46.016117Z"
         }
       },
       "cell_type": "code",
       "source": [
-        "val (test2) = readString(\"test2\").map { it.replace('\\n', '_') }\n",
+        "val test2 by file(::parseInput)\n",
         "check(sumOfProducts(getValidMuls(removeDisabledMuls(test2)))==48)"
       ],
       "outputs": [],
@@ -120,8 +123,8 @@
     {
       "metadata": {
         "ExecuteTime": {
-          "end_time": "2024-12-03T13:13:10.962835Z",
-          "start_time": "2024-12-03T13:13:10.938720Z"
+          "end_time": "2024-12-04T20:10:46.119215Z",
+          "start_time": "2024-12-04T20:10:46.081536Z"
         }
       },
       "cell_type": "code",
